syntax = "proto3";
package perpdex.orderbook.v1;

option go_package = "github.com/openalpha/perp-dex/x/orderbook/types";

import "perpdex/orderbook/v1/types.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "amino/amino.proto";

// Msg defines the orderbook Msg service
service Msg {
  option (cosmos.msg.v1.service) = true;

  // PlaceOrder places a new order
  rpc PlaceOrder(MsgPlaceOrder) returns (MsgPlaceOrderResponse);

  // CancelOrder cancels an existing order
  rpc CancelOrder(MsgCancelOrder) returns (MsgCancelOrderResponse);
}

// MsgPlaceOrder defines the PlaceOrder request
message MsgPlaceOrder {
  option (cosmos.msg.v1.signer) = "trader";
  option (amino.name) = "perpdex/orderbook/MsgPlaceOrder";

  string trader = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string market_id = 2;
  Side side = 3;
  OrderType order_type = 4;
  string price = 5;    // sdk.Dec as string, ignored for market orders
  string quantity = 6; // sdk.Dec as string
}

// MsgPlaceOrderResponse defines the PlaceOrder response
message MsgPlaceOrderResponse {
  string order_id = 1;
  string filled_qty = 2;
  string avg_price = 3;
  repeated Trade trades = 4;
}

// MsgCancelOrder defines the CancelOrder request
message MsgCancelOrder {
  option (cosmos.msg.v1.signer) = "trader";
  option (amino.name) = "perpdex/orderbook/MsgCancelOrder";

  string trader = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string order_id = 2;
}

// MsgCancelOrderResponse defines the CancelOrder response
message MsgCancelOrderResponse {
  string cancelled_qty = 1;
}
